Dark mode refinements & button fix

--- a/styles/dark-mode.css
+++ b/styles/dark-mode.css
@@ -3,3 +3,16 @@
 	--colour-text-link:#12588f;
 	--colour-text-heading:#a8b9ca;
 }
+
+.sheet.fox4e.npc .window-content a:hover,
+.sheet.fox4e.npc button{
+	color:#000;
+}
+.sheet.fox4e.npc input[type="checkbox"]{
+	filter:unset;
+	opacity:1;
+}
+.sheet.fox4e.npc .editable .rollable:hover,
+.sheet.fox4e.npc .rollable:hover{
+	color:#000;
+}
