--- a/styles/journal.css
+++ b/styles/journal.css
@@ -254,6 +254,7 @@
 	background:linear-gradient(270deg, rgba(255,255,255,1) 0%, rgba(221,220,203,1) 100%);
 	font-family:'DragonbodySans';
 	font-style:italic;
+	color:#000;
 }
 
 /*-----------*/
